Fix font not showing up issue.

--- a/input-files/main-files/main.css
+++ b/input-files/main-files/main.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: 'AvenirLTStd-Medium';
+    src: url("AvenirLTStd-Medium.otf"); /* File to be stored at your site */
+}
+
 * {
-    font-family: Avenir;
+    font-family: 'Avenir' !important;
 }
 
 #age-number {
